--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
             libgbm1 \
             libpango-1.0-0 \
             libcairo2 \
-            libasound2 \
+            libasound2t64 \
             libatspi2.0-0 \
             libxshmfence1
       
@@ -97,11 +97,14 @@ jobs:
             cookies.json
           key: bazos-data-${{ github.run_id }}
       
-      - name: Upload debug artifacts
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
-        if: failure()
+        if: always()
         with:
-          name: debug-screenshots
+          name: bazos-data
           path: |
-            debug*.png
-          retention-days: 3
+            scored_listings.json
+            listings.json
+            market_values.json
+            notified_deals.json
+          retention-days: 90
