--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -5,6 +5,9 @@ on:
     workflows: ["BazosBot Scraper"]
     types:
       - completed
+  push:
+    branches: [main]
+  workflow_dispatch:
 
 permissions:
   contents: read
