--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
           path: |
             listings.json
             market_values.json
+            market_history.json
             scored_listings.json
             notified_deals.json
             cookies.json
@@ -92,6 +93,7 @@ jobs:
           path: |
             listings.json
             market_values.json
+            market_history.json
             scored_listings.json
             notified_deals.json
             cookies.json
@@ -106,5 +108,6 @@ jobs:
             scored_listings.json
             listings.json
             market_values.json
+            market_history.json
             notified_deals.json
           retention-days: 90
