--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,12 @@ jobs:
         run: |
           timeout 500 node autobazar_eu_agent.js || true
         continue-on-error: true
+
+      - name: Run Autobazar.sk scraper
+        timeout-minutes: 10
+        run: |
+          timeout 500 node autobazar_sk_agent.js || true
+        continue-on-error: true
       
       - name: Analyze market values
         run: node market_value_agent.js
