--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "dotenv": "^16.6.1",
     "puppeteer": "^21.6.1",
     "puppeteer-extra": "^3.3.6",
