Migration to SQLite and implementation of Trend Ceny, Seller Check and Risk Score

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.6.1",
     "puppeteer": "^21.6.1",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "sqlite3": "^5.1.7"
   }
 }
