--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,13 @@ TELEGRAM_BOT_TOKEN=your_bot_token_here
 # 3. Visit: https://api.telegram.org/bot<YOUR_BOT_TOKEN>/getUpdates
 # 4. Find "chat":{"id": 123456789}
 TELEGRAM_CHAT_ID=your_chat_id_here
+
+# Stripe Payment Configuration
+# Get this from https://dashboard.stripe.com/apikeys
+# Format: sk_test_... (for testing) or sk_live_... (for production)
+STRIPE_SECRET_KEY=your_stripe_secret_key_here
+
+# Render / Server Configuration
+# Only needed if you want to override default behavior
+# PORT=10000
+# DEMO_MODE=true
